Add GA tracking code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <title>Cauldron by conjurinc</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
 </head>
@@ -18,7 +18,7 @@
     <a href="#providerList" class="btn">Providers</a>
     <div id="byConjur">
       <span class="project-tagline">brewed by</span>
-      <a href="http://www.conjur.net?utm_campaign=cauldron&utm_source=GitHub">
+      <a href="https://www.conjur.net?utm_campaign=cauldron&utm_source=GitHub">
         <img src="https://developer.conjur.net/assets/conjur-logo_white-dd0793ef769fa0dbec2bb49a963f001d64f7e73d1939f521cfc17ef6a644e402.svg"/>
       </a>
     </div>
