link downloads to bintray

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <h1 class="project-name">cauldron</h1>
     <h2 class="project-tagline">get your secrets <em>into</em> source control</h2>
     <a href="https://github.com/conjurinc/cauldron" class="btn">View on GitHub</a>
-    <a href="https://github.com/conjurinc/cauldron/releases" class="btn">Download</a>
+    <a href="https://bintray.com/conjur/cauldron/cauldron/_latestVersion" class="btn">Download</a>
     <a href="#providerList" class="btn">Providers</a>
     <div id="byConjur">
       <span class="project-tagline">brewed by</span>
