--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Cauldron by conjurinc</title>
+  <title>Summon by conjurinc</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,14 +11,14 @@
 </head>
 <body>
   <section class="page-header">
-    <h1 class="project-name">cauldron</h1>
+    <h1 class="project-name">summon</h1>
     <h2 class="project-tagline">get your secrets <em>into</em> source control</h2>
-    <a href="https://github.com/conjurinc/cauldron" class="btn">View on GitHub</a>
-    <a href="https://github.com/conjurinc/cauldron/releases" class="btn">Download</a>
+    <a href="https://github.com/conjurinc/summon" class="btn">View on GitHub</a>
+    <a href="https://github.com/conjurinc/summon/releases" class="btn">Download</a>
     <a href="#providerList" class="btn">Providers</a>
     <div id="byConjur">
       <span class="project-tagline">brewed by</span>
-      <a href="https://www.conjur.net?utm_campaign=cauldron&utm_source=GitHub">
+      <a href="https://www.conjur.net?utm_campaign=summon&utm_source=GitHub">
         <img src="https://developer.conjur.net/assets/conjur-logo_white-dd0793ef769fa0dbec2bb49a963f001d64f7e73d1939f521cfc17ef6a644e402.svg"/>
       </a>
     </div>
@@ -30,7 +30,7 @@
 
     <footer class="site-footer">
       <span class="site-footer-owner">
-        <a href="https://github.com/conjurinc/cauldron">Cauldron</a>
+        <a href="https://github.com/conjurinc/summon">Summon</a>
         is maintained by
         <a href="https://github.com/conjurinc">conjurinc</a>.
       </span>
