[#95637386] First draft of summon+docker tutorial

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+  <style type="text/css">
+    .gist-data { padding: 5px !important; }
+  </style>
 </head>
 <body>
   <section class="page-header">
