--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,14 @@
 </head>
 <body>
   <section class="page-header">
-    <h1 class="project-name">summon</h1>
+    <h1 class="project-name"><a href="/">summon</a></h1>
     <h2 class="project-tagline">get your secrets <em>into</em> source control</h2>
     <a href="https://github.com/conjurinc/summon" class="btn">View on GitHub</a>
     <a href="https://github.com/conjurinc/summon/releases" class="btn">Download</a>
     <a href="#providerList" class="btn">Providers</a>
     <div id="byConjur">
-      <span class="project-tagline">brewed by</span>
       <a href="https://www.conjur.net?utm_campaign=summon&utm_source=GitHub">
+        <span class="project-tagline">brewed by</span>
         <img src="https://developer.conjur.net/assets/conjur-logo_white-dd0793ef769fa0dbec2bb49a963f001d64f7e73d1939f521cfc17ef6a644e402.svg"/>
       </a>
     </div>
