--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
   <section class="page-header">
     <h1 class="project-name"><a href="/">summon</a></h1>
     <h2 class="project-tagline">get your secrets <em>into</em> source control</h2>
-    <a href="/#examples" class="btn">Examples</a>
+    <a href="https://conjurinc.github.io/summon/#examples" class="btn">Examples</a>
     <a href="https://github.com/conjurinc/summon/releases" class="btn">Download</a>
-    <a href="/#providers" class="btn">Providers</a>
+    <a href="http://conjurinc.github.io/summon/#providers" class="btn">Providers</a>
     <div id="byConjur">
       <a href="https://www.conjur.net?utm_campaign=summon&utm_source=GitHub">
         <span class="project-tagline">brewed by</span>
