fix header link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <body>
 
   <section class="page-header">
-    <h1 class="project-name"><a href="/">summon</a></h1>
+    <h1 class="project-name"><a href="https://conjurinc.github.io/summon">summon</a></h1>
     <h2 class="project-tagline">get your secrets <em>into</em> source control</h2>
     <a href="https://conjurinc.github.io/summon/#examples" class="btn">Examples</a>
     <a href="https://github.com/conjurinc/summon/releases" class="btn">Download</a>
