fix by-conjur logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <div id="byConjur">
       <a href="https://www.conjur.net?utm_campaign=summon&utm_source=GitHub">
         <span class="project-tagline">brewed by</span>
-        <img src="https://developer.conjur.net/assets/conjur-logo_white-dd0793ef769fa0dbec2bb49a963f001d64f7e73d1939f521cfc17ef6a644e402.svg"/>
+        <img src="//i.imgur.com/08rC50B.png"/>
       </a>
     </div>
   </section>
