Fix old links pointing to conjur.net

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -36,7 +36,7 @@
     <a href="https://github.com/cyberark/summon/releases" class="btn">Download</a>
     <a href="http://cyberark.github.io/summon/#providers" class="btn">Providers</a>
     <div id="byConjur">
-      <a href="https://www.conjur.net?utm_campaign=summon&utm_source=GitHub">
+      <a href="https://www.conjur.org?utm_campaign=summon&utm_source=GitHub">
         <span class="project-tagline">brewed by</span>
         <img src="//i.imgur.com/08rC50B.png"/>
       </a>
